- Stop drop down menus (<select>) overflowing - Make settings an expandable nav item - If on a device with a mouse/pointer the drop downs in the nav bar will expand on hover

--- a/static/madmin/static/style/MAD.css
+++ b/static/madmin/static/style/MAD.css
@@ -396,3 +396,16 @@ div.columns div.dataTables_paginate li.next a:after,
 div.columns div.dataTables_paginate li.last a:after {
   top: 0;
 }
+
+select {
+  max-width: 100%
+}
+
+.dropdown:hover>.dropdown-menu {
+  display: block;
+}
+
+.dropdown>.dropdown-toggle:active {
+  /*Without this, clicking will make it sticky*/
+  pointer-events: none;
+}
